[gd_scene load_steps=6 format=3 uid="uid://cvttmsc2rymrv"]

[ext_resource type="Script" path="res://objects/main_scene.gd" id="1_yp3o1"]
[ext_resource type="PackedScene" uid="uid://dxq3ivywr824b" path="res://objects/assembled.tscn" id="2_gtedn"]
[ext_resource type="Script" path="res://objects/camera.gd" id="3_kkewa"]
[ext_resource type="PackedScene" uid="uid://3d8l8e2da1dq" path="res://objects/distanced_camera.tscn" id="4_e3nbe"]
[ext_resource type="Script" path="res://objects/mmb_hint.gd" id="5_mrx07"]

[node name="MainScene" type="Node3D"]
script = ExtResource("1_yp3o1")

[node name="assembled" parent="." instance=ExtResource("2_gtedn")]

[node name="camera_horizontal_pivot" type="Node3D" parent="."]
script = ExtResource("3_kkewa")

[node name="camera_vertical_pivot" type="Node3D" parent="camera_horizontal_pivot"]

[node name="distanced_camera" parent="camera_horizontal_pivot/camera_vertical_pivot" instance=ExtResource("4_e3nbe")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 6.23538)
observing_shape_size = Vector3i(3, 3, 3)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.534826, 0.733042, -0.420251, -0.25, 0.612372, 0.75, 0.807131, -0.296057, 0.510773, 5, 4, 0)
shadow_enabled = true

[node name="mmb_hint" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -207.5
offset_top = 20.0
offset_right = 207.5
offset_bottom = 46.0
grow_horizontal = 2
text = "Hold mouse wheel and move mouse to rotate camera"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("5_mrx07")

[editable path="assembled"]
